--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ web/core
 # that core/assets/vendor and any other vendor directories within contrib or
 # custom module, theme, etc., are not ignored unless you purposely do so.
 /vendor/
-web/vendor
+
+# Ignore contributed code
+web/modules/contrib
+web/themes/contrib
+web/profiles/contrib
+
 
 # Ignore configuration files that may contain sensitive information.
 web/sites/*/settings*.php
