--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,6 +22,8 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  gin_login: 0
+  gin_toolbar: 0
   help: 0
   history: 0
   image: 0
@@ -50,4 +52,5 @@ module:
 theme:
   olivero: 0
   claro: 0
+  gin: 0
 profile: standard
