Add and enable padel365 theme

--- a/web/themes/padel365/padel365.info.yml
+++ b/web/themes/padel365/padel365.info.yml
@@ -1,6 +1,6 @@
 name: Padel365
 type: theme
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 
 base theme: false
 
