--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ web/profiles/contrib
 # Ignore configuration files that may contain sensitive information.
 web/sites/*/settings*.php
 web/sites/*/services*.yml
-web/sites/*/development.services.yml
+web/sites/development.services.yml
 
 # Ignore paths that contain user-generated content.
 web/sites/*/files
