Add region for system messages

--- a/web/themes/padel365/padel365.info.yml
+++ b/web/themes/padel365/padel365.info.yml
@@ -5,6 +5,7 @@ core_version_requirement: ^8.8 || ^9 || ^10
 base theme: false
 
 regions:
+  messages: Messages
   header: Header
   content: Content
   footer: Footer
