--- a/config/sync/block.block.padel365_messages.yml
+++ b/config/sync/block.block.padel365_messages.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: BZ5tpW7H8X4PVGRm3MImTIHd2tN0eF7zOtp4SpRYUA0
 id: padel365_messages
 theme: padel365
-region: header
-weight: -5
+region: messages
+weight: -4
 provider: null
 plugin: system_messages_block
 settings:
