--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/mail_login": "^3.0",
         "drupal/masquerade": "^2.0@RC",
         "drupal/menu_admin_per_menu": "^1.5",
+        "drupal/menu_link_attributes": "^1.3",
         "drupal/metatag": "^2.0",
         "drupal/module_filter": "^4.1",
         "drupal/paragraphs": "^1.17",
