Update block regions

--- a/config/sync/block.block.padel365_breadcrumbs.yml
+++ b/config/sync/block.block.padel365_breadcrumbs.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: VhBzWb7lMRtIOg9G7VSw_0uopi-7zXeHq4vXqqV1HFE
 id: padel365_breadcrumbs
 theme: padel365
-region: header
-weight: 1
+region: content
+weight: -4
 provider: null
 plugin: system_breadcrumb_block
 settings:
