--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -3,7 +3,7 @@ _core:
 langcode: sv
 uuid: 4e572c6c-deba-4c41-baa7-4e6131ea7dfb
 popup_enabled: true
-popup_clicking_confirmation: true
+popup_clicking_confirmation: false
 popup_scrolling_confirmation: false
 eu_countries: {  }
 eu_only: false
@@ -14,7 +14,7 @@ popup_info:
   value: '<h2>We use cookies on this site to enhance your user experience</h2><p>By clicking the Accept button, you agree to us doing so.</p>'
   format: basic_html
 mobile_popup_info:
-  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>By tapping the Accept button, you agree to us doing so.</p>'
+  value: ''
   format: basic_html
 popup_info_template: new
 popup_agree_button_message: Accept
@@ -30,32 +30,28 @@ popup_find_more_button_message: 'More info'
 popup_hide_button_message: Hide
 popup_link: '<front>'
 popup_link_new_window: true
-popup_height: 0
-popup_width: 100%
+popup_height: null
+popup_width: ''
 popup_delay: 1000
 show_more_info: true
-popup_bg_hex: 0779bf
-popup_text_hex: ffffff
+popup_bg_hex: ''
+popup_text_hex: ''
 domain: ''
 domains_option: 1
 domains_list: ''
-exclude_paths: |-
-  /admin
-  /admin/*
-  /batch
-  /node/add*
-  /node/*/*
-  /user/*/*
+exclude_paths: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/*\r\n/user/*/*"
 exclude_admin_theme: false
+cookie_session: 0
+set_cookie_session_zero_on_disagree: 0
 cookie_lifetime: 100
 use_mobile_message: false
-use_bare_css: false
-use_olivero_css: true
+use_bare_css: true
+use_olivero_css: false
 disagree_do_not_show_popup: false
 reload_page: false
 reload_options: 0
 reload_routes_list: ''
-cookie_name: ''
+cookie_name: cookie_consent_p365_0
 exclude_uid_1: false
 better_support_for_screen_readers: false
 method: opt_in
@@ -85,3 +81,6 @@ close_button_action: close_banner
 reject_button_label: ''
 reject_button_enabled: false
 close_button_enabled: false
+dependencies:
+  config:
+    - filter.format.basic_html
