--- a/config/sync/core.entity_form_display.media.remote_video.media_library.yml
+++ b/config/sync/core.entity_form_display.media.remote_video.media_library.yml
@@ -25,5 +25,7 @@ hidden:
   field_media_oembed_video: true
   name: true
   path: true
+  publish_on: true
   status: true
   uid: true
+  unpublish_on: true
