--- a/config/sync/filter.format.restricted_html.yml
+++ b/config/sync/filter.format.restricted_html.yml
@@ -1,6 +1,6 @@
 uuid: 761cf6db-1458-4649-9a62-80a37b574d3b
 langcode: sv
-status: true
+status: false
 dependencies: {  }
 _core:
   default_config_hash: QiKqQS_YGAT3Qr4vaAgZICJknm-MGCzt_xBAMqg-tRM
