--- a/config/sync/gin.settings.yml
+++ b/config/sync/gin.settings.yml
@@ -21,6 +21,6 @@ secondary_toolbar_frontend: true
 high_contrast_mode: false
 accent_color: ''
 focus_color: ''
-layout_density: medium
+layout_density: small
 show_description_toggle: false
 show_user_theme_settings: false
