--- a/config/sync/core.base_field_override.node.landingpage.promote.yml
+++ b/config/sync/core.base_field_override.node.landingpage.promote.yml
@@ -1,13 +1,13 @@
-uuid: 558a749b-d4a3-4f70-b79d-60cb016e6dba
+uuid: 13fc1309-f46d-4a8b-96ce-4b871542c41c
 langcode: sv
 status: true
 dependencies:
   config:
-    - node.type.landing_page
-id: node.landing_page.promote
+    - node.type.landingpage
+id: node.landingpage.promote
 field_name: promote
 entity_type: node
-bundle: landing_page
+bundle: landingpage
 label: 'Visas på startsidan'
 description: ''
 required: false
