--- a/config/sync/core.entity_form_display.node.landingpage.default.yml
+++ b/config/sync/core.entity_form_display.node.landingpage.default.yml
@@ -1,50 +1,64 @@
-uuid: 45ffe89f-b3aa-4e19-bf29-4343365fda34
+uuid: d0d85e8f-1cf3-494c-a2fe-c97c65a3d258
 langcode: sv
 status: true
 dependencies:
   config:
-    - node.type.landing_page
+    - node.type.landingpage
   module:
     - path
-id: node.landing_page.default
+id: node.landingpage.default
 targetEntityType: node
-bundle: landing_page
+bundle: landingpage
 mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
+  promote:
+    type: boolean_checkbox
+    weight: 15
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   simple_sitemap:
-    weight: 4
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 7
+    weight: 120
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  sticky:
+    type: boolean_checkbox
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
@@ -52,7 +66,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -61,12 +75,10 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 6
+    weight: 50
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  promote: true
   publish_on: true
-  sticky: true
   unpublish_on: true
