--- a/config/sync/media.type.image.yml
+++ b/config/sync/media.type.image.yml
@@ -22,10 +22,10 @@ _core:
   default_config_hash: 6Qope5wG7HUpV0tPOBMtDI_GZkHFcF1Xj4hgD9Cu_hM
 id: image
 label: Bild
-description: 'Använd lokala bilder för återanvändbara media.'
+description: 'Mediatyp för generella bilder'
 source: image
 queue_thumbnail_downloads: false
-new_revision: true
+new_revision: false
 source_configuration:
   source_field: field_media_image
 field_map:
