--- a/config/sync/core.entity_form_display.node.landingpage.default.yml
+++ b/config/sync/core.entity_form_display.node.landingpage.default.yml
@@ -3,9 +3,64 @@ langcode: sv
 status: true
 dependencies:
   config:
+    - field.field.node.landingpage.field_lp_hero_image
+    - field.field.node.landingpage.field_lp_hero_preamble
+    - field.field.node.landingpage.field_lp_section
     - node.type.landingpage
   module:
+    - field_group
+    - media_library
+    - paragraphs
     - path
+third_party_settings:
+  field_group:
+    group_flikar:
+      children:
+        - group_hero
+        - group_sektioner
+      label: Flikar
+      region: content
+      parent_name: ''
+      weight: 0
+      format_type: tabs
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        direction: horizontal
+        width_breakpoint: 640
+    group_hero:
+      children:
+        - title
+        - field_lp_hero_preamble
+        - field_lp_hero_image
+      label: Hero
+      region: content
+      parent_name: group_flikar
+      weight: 1
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: open
+        description: ''
+        required_fields: true
+    group_sektioner:
+      children:
+        - field_lp_section
+      label: Sektioner
+      region: content
+      parent_name: group_flikar
+      weight: 2
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: true
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
 id: node.landingpage.default
 targetEntityType: node
 bundle: landingpage
@@ -13,52 +68,61 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
+  field_lp_hero_image:
+    type: media_library_widget
+    weight: 4
     region: content
     settings:
-      include_locked: true
+      media_types: {  }
+    third_party_settings: {  }
+  field_lp_hero_preamble:
+    type: string_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_lp_section:
+    type: paragraphs
+    weight: 1
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed_expand_nested
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        add_above: '0'
+        collapse_edit_all: collapse_edit_all
+        convert: '0'
+        duplicate: duplicate
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    weight: 15
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  simple_sitemap:
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    weight: 16
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 2
     region: content
     settings:
       size: 60
@@ -66,7 +130,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -74,11 +138,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  url_redirects:
-    weight: 50
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  langcode: true
+  promote: true
   publish_on: true
+  simple_sitemap: true
+  sticky: true
   unpublish_on: true
+  url_redirects: true
