--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -18,15 +18,13 @@ settings:
       - '|'
       - link
       - '|'
-      - bulletedList
-      - numberedList
-      - '|'
-      - blockQuote
       - drupalInsertImage
       - '|'
-      - heading
-      - code
+      - blockQuote
       - '|'
+      - heading
+      - '|'
+      - removeFormat
       - sourceEditing
   plugins:
     ckeditor5_heading:
@@ -38,11 +36,6 @@ settings:
         - heading6
     ckeditor5_imageResize:
       allow_resize: true
-    ckeditor5_list:
-      properties:
-        reversed: false
-        startIndex: true
-      multiBlock: true
     ckeditor5_sourceEditing:
       allowed_tags:
         - '<cite>'
@@ -58,6 +51,8 @@ settings:
         - '<h4 id>'
         - '<h5 id>'
         - '<h6 id>'
+    linkit_extension:
+      linkit_enabled: false
 image_upload:
   status: true
   scheme: public
