Update labels on landing page fields

--- a/config/sync/core.base_field_override.node.landingpage.title.yml
+++ b/config/sync/core.base_field_override.node.landingpage.title.yml
@@ -8,7 +8,7 @@ id: node.landingpage.title
 field_name: title
 entity_type: node
 bundle: landingpage
-label: 'Sidans rubrik (visas i hero)'
+label: Titel
 description: ''
 required: true
 translatable: true
