--- a/config/sync/core.entity_view_display.media.hero_image.hero.yml
+++ b/config/sync/core.entity_view_display.media.hero_image.hero.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.hero
     - field.field.media.hero_image.field_media_image
-    - image.style.hero
+    - image.style.hero_lp
     - media.type.hero_image
   module:
     - image
@@ -19,7 +19,7 @@ content:
     label: hidden
     settings:
       image_link: ''
-      image_style: hero
+      image_style: hero_lp
       image_loading:
         attribute: lazy
     third_party_settings: {  }
