--- a/config/sync/core.entity_view_mode.media.hero.yml
+++ b/config/sync/core.entity_view_mode.media.hero.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - media
 id: media.hero
-label: Hero
+label: 'Hero (lp)'
 description: ''
 targetEntityType: media
 cache: true
