--- a/config/sync/image.style.hero_lp.yml
+++ b/config/sync/image.style.hero_lp.yml
@@ -2,14 +2,14 @@ uuid: ca97e740-481d-44f1-9d19-d56ecd904316
 langcode: sv
 status: true
 dependencies: {  }
-name: hero
-label: Hero
+name: hero_lp
+label: 'Hero (lp)'
 effects:
   d41b0b08-f76e-4aff-9855-460bc112d5d8:
     uuid: d41b0b08-f76e-4aff-9855-460bc112d5d8
     id: image_scale_and_crop
     weight: 1
     data:
-      width: 1400
-      height: 600
-      anchor: center-center
+      width: 1600
+      height: 1000
+      anchor: right-center
