--- a/config/sync/field.field.paragraph.section_bodytext.field_section_bodytext.yml
+++ b/config/sync/field.field.paragraph.section_bodytext.field_section_bodytext.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_section_bodytext
-    - filter.format.basic_html
+    - filter.format.full_html
     - paragraphs.paragraphs_type.section_bodytext
   module:
     - text
@@ -20,5 +20,5 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    - basic_html
+    - full_html
 field_type: text_long
