--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -5,10 +5,15 @@ dependencies:
   config:
     - filter.format.basic_html
     - filter.format.full_html
+    - media.type.document
     - media.type.hero_image
+    - media.type.image
     - node.type.article
+    - node.type.contentpage
+    - node.type.landingpage
     - taxonomy.vocabulary.tags
   module:
+    - coffee
     - contextual
     - file
     - filter
@@ -26,28 +31,55 @@ weight: 2
 is_admin: false
 permissions:
   - 'access administration pages'
+  - 'access coffee'
   - 'access content overview'
   - 'access contextual links'
   - 'access files overview'
+  - 'access media overview'
+  - 'access site reports'
+  - 'access taxonomy overview'
   - 'access toolbar'
+  - 'access user profiles'
+  - 'administer menu'
   - 'administer url aliases'
+  - 'change own username'
   - 'create article content'
+  - 'create contentpage content'
+  - 'create document media'
   - 'create hero_image media'
+  - 'create image media'
+  - 'create landingpage content'
   - 'create terms in tags'
   - 'create url aliases'
-  - 'delete any hero_image media'
-  - 'delete any hero_image media revisions'
-  - 'delete article revisions'
   - 'delete own article content'
+  - 'delete own document media'
   - 'delete own files'
   - 'delete own hero_image media'
+  - 'delete own image media'
+  - 'delete terms in tags'
+  - 'edit any article content'
+  - 'edit any contentpage content'
+  - 'edit any document media'
   - 'edit any hero_image media'
+  - 'edit any image media'
+  - 'edit any landingpage content'
   - 'edit own article content'
+  - 'edit own contentpage content'
+  - 'edit own document media'
   - 'edit own hero_image media'
+  - 'edit own image media'
+  - 'edit own landingpage content'
   - 'edit terms in tags'
   - 'revert all revisions'
   - 'use text format basic_html'
   - 'use text format full_html'
   - 'view all revisions'
+  - 'view any document media revisions'
+  - 'view any hero_image media revisions'
+  - 'view any image media revisions'
+  - 'view article revisions'
+  - 'view contentpage revisions'
+  - 'view landingpage revisions'
   - 'view own unpublished content'
   - 'view the administration theme'
+  - 'view user email addresses'
