--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -7,8 +7,9 @@ dependencies:
     - scheduler
 third_party_settings:
   menu_ui:
-    available_menus: {  }
-    parent: ''
+    available_menus:
+      - main
+    parent: 'main:'
   scheduler:
     expand_fieldset: when_required
     fields_display_mode: vertical_tab
@@ -30,4 +31,4 @@ description: 'Använd <em>artiklar</em> för tidskänsligt innehåll som nyheter
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
