--- a/config/sync/core.entity_form_display.node.landingpage.default.yml
+++ b/config/sync/core.entity_form_display.node.landingpage.default.yml
@@ -3,12 +3,14 @@ langcode: sv
 status: true
 dependencies:
   config:
+    - field.field.node.landingpage.field_lp_cta_button
     - field.field.node.landingpage.field_lp_hero_image
     - field.field.node.landingpage.field_lp_hero_preamble
     - field.field.node.landingpage.field_lp_section
     - node.type.landingpage
   module:
     - field_group
+    - linkit
     - media_library
     - paragraphs
     - path
@@ -31,9 +33,10 @@ third_party_settings:
         width_breakpoint: 640
     group_hero:
       children:
+        - field_lp_hero_image
         - title
         - field_lp_hero_preamble
-        - field_lp_hero_image
+        - field_lp_cta_button
       label: Hero
       region: content
       parent_name: group_flikar
@@ -72,6 +75,16 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_lp_cta_button:
+    type: linkit
+    weight: 7
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+      linkit_profile: default
+      linkit_auto_link_text: true
+    third_party_settings: {  }
   field_lp_hero_image:
     type: media_library_widget
     weight: 4
@@ -81,7 +94,7 @@ content:
     third_party_settings: {  }
   field_lp_hero_preamble:
     type: string_textarea
-    weight: 3
+    weight: 6
     region: content
     settings:
       rows: 5
@@ -122,7 +135,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 2
+    weight: 5
     region: content
     settings:
       size: 60
