--- a/config/sync/core.entity_view_display.node.landingpage.teaser.yml
+++ b/config/sync/core.entity_view_display.node.landingpage.teaser.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.landingpage.field_lp_cta_button
     - field.field.node.landingpage.field_lp_hero_image
     - field.field.node.landingpage.field_lp_hero_preamble
     - field.field.node.landingpage.field_lp_section
@@ -16,6 +17,7 @@ bundle: landingpage
 mode: teaser
 content: {  }
 hidden:
+  field_lp_cta_button: true
   field_lp_hero_image: true
   field_lp_hero_preamble: true
   field_lp_section: true
