--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -115,7 +115,8 @@ settings:
           label: 'Grön text'
           element: '<span class="green-text">'
     linkit_extension:
-      linkit_enabled: false
+      linkit_enabled: true
+      linkit_profile: default
 image_upload:
   status: true
   scheme: public
