--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -34,7 +34,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<br> <p> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <span class="green-text"> <cite> <dl> <dt> <dd> <a hreflang href> <blockquote cite> <ul type> <ol type> <strong> <em> <img src alt height width data-entity-uuid data-entity-type>'
+      allowed_html: '<br> <p> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <span class="green-text"> <cite> <dl> <dt> <dd> <a hreflang href data-entity-type data-entity-uuid data-entity-substitution> <blockquote cite> <ul type> <ol type> <strong> <em> <img src alt height width data-entity-uuid data-entity-type>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_html_image_secure:
