--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -11,29 +11,29 @@ eu_only_js: false
 popup_position: false
 fixed_top_position: true
 popup_info:
-  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>By clicking the Accept button, you agree to us doing so.</p>'
-  format: basic_html
+  value: '<h2><span>Vi använder kakor för att förbättra din upplevelse på padel365.nu</span></h2><p><span>Genom att klicka på knappen "Acceptera" samtycker du till att vi gör detta. Läs mer om </span><a href="/kakor"><span>kakor</span></a><span> och hur vi hanterar </span><a href="/personuppgifter"><span>personuppgifter</span></a><span>.</span></p>'
+  format: full_html
 mobile_popup_info:
   value: ''
   format: basic_html
 popup_info_template: new
-popup_agree_button_message: Accept
-popup_more_info_button_message: 'More info'
+popup_agree_button_message: Acceptera
+popup_more_info_button_message: 'Mer information'
 mobile_breakpoint: 768
 popup_agreed_enabled: false
 popup_hide_agreed: false
-disagree_button_label: 'No, thanks'
+disagree_button_label: 'Nej tack'
 popup_agreed:
   value: '<h2>Thank you for accepting cookies</h2><p>You can now hide this message or find out more about cookies.</p>'
-  format: basic_html
+  format: full_html
 popup_find_more_button_message: 'More info'
 popup_hide_button_message: Hide
-popup_link: '<front>'
+popup_link: /kakor
 popup_link_new_window: true
 popup_height: null
 popup_width: ''
 popup_delay: 1000
-show_more_info: true
+show_more_info: false
 popup_bg_hex: ''
 popup_text_hex: ''
 domain: ''
@@ -61,7 +61,7 @@ allowed_cookies: ''
 consent_storage_method: do_not_store
 withdraw_message:
   value: '<h2>We use cookies on this site to enhance your user experience</h2><p>You have given your consent for us to set cookies.</p>'
-  format: basic_html
+  format: full_html
 withdraw_tab_button_label: 'Privacy settings'
 withdraw_action_button_label: 'Återkalla samtycke'
 withdraw_enabled: false
@@ -84,3 +84,4 @@ close_button_enabled: false
 dependencies:
   config:
     - filter.format.basic_html
+    - filter.format.full_html
