Install, enable and config Cheeseburger menu

--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -9,7 +9,7 @@ definitions:
     expanded: false
     enabled: true
   standard__front_page:
-    enabled: true
+    enabled: false
     menu_name: main
     parent: ''
     expanded: false
