--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/block_field": "^1.0@RC",
+        "drupal/cheeseburger_menu": "^5.0@RC",
         "drupal/coffee": "^1.4",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
